# ExcelLinker

./: .gitignore  README.md  pyproject.toml
src/excel_linker/: sheet.py  transform.py
